@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2012 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,11 @@
 
 package org.springframework.test.context.junit4.orm;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.springframework.test.transaction.TransactionTestUtils.assertInTransaction;
+import javax.persistence.PersistenceException;
 
+import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.exception.ConstraintViolationException;
-
 import org.junit.Before;
 import org.junit.Test;
 
@@ -32,12 +30,18 @@ import org.springframework.test.context.junit4.AbstractTransactionalJUnit4Spring
 import org.springframework.test.context.junit4.orm.domain.DriversLicense;
 import org.springframework.test.context.junit4.orm.domain.Person;
 import org.springframework.test.context.junit4.orm.service.PersonService;
+import org.springframework.transaction.annotation.Transactional;
+
+import static org.junit.Assert.*;
+import static org.springframework.test.transaction.TransactionTestUtils.*;
 
 /**
  * Transactional integration tests regarding <i>manual</i> session flushing with
  * Hibernate.
  *
  * @author Sam Brannen
+ * @author Juergen Hoeller
+ * @author Vlad Mihalcea
  * @since 3.0
  */
 @ContextConfiguration
@@ -53,20 +57,13 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 	private SessionFactory sessionFactory;
 
 
-	protected int countRowsInPersonTable() {
-		return countRowsInTable("person");
-	}
-
-	protected void assertPersonCount(int expectedCount) {
-		assertEquals("Verifying number of rows in the 'person' table.", expectedCount, countRowsInPersonTable());
-	}
-
 	@Before
-	public void setUp() {
+	public void setup() {
 		assertInTransaction(true);
 		assertNotNull("PersonService should have been autowired.", personService);
 		assertNotNull("SessionFactory should have been autowired.", sessionFactory);
 	}
+
 
 	@Test
 	public void findSam() {
@@ -74,16 +71,28 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 		assertNotNull("Should be able to find Sam", sam);
 		DriversLicense driversLicense = sam.getDriversLicense();
 		assertNotNull("Sam's driver's license should not be null", driversLicense);
-		assertEquals("Verifying Sam's driver's license number", new Long(1234), driversLicense.getNumber());
+		assertEquals("Verifying Sam's driver's license number", Long.valueOf(1234), driversLicense.getNumber());
+	}
+
+	@Test  // SPR-16956
+	@Transactional(readOnly = true)
+	public void findSamWithReadOnlySession() {
+		Person sam = personService.findByName(SAM);
+		sam.setName("Vlad");
+		// By setting setDefaultReadOnly(true), the user can no longer modify any entity...
+		Session session = sessionFactory.getCurrentSession();
+		session.flush();
+		session.refresh(sam);
+		assertEquals("Sam", sam.getName());
 	}
 
 	@Test
 	public void saveJuergenWithDriversLicense() {
 		DriversLicense driversLicense = new DriversLicense(2L, 2222L);
 		Person juergen = new Person(JUERGEN, driversLicense);
-		int numRows = countRowsInPersonTable();
+		int numRows = countRowsInTable("person");
 		personService.save(juergen);
-		assertPersonCount(numRows + 1);
+		assertEquals("Verifying number of rows in the 'person' table.", numRows + 1, countRowsInTable("person"));
 		assertNotNull("Should be able to save and retrieve Juergen", personService.findByName(JUERGEN));
 		assertNotNull("Juergen's ID should have been set", juergen.getId());
 	}
@@ -91,13 +100,6 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 	@Test(expected = ConstraintViolationException.class)
 	public void saveJuergenWithNullDriversLicense() {
 		personService.save(new Person(JUERGEN));
-	}
-
-	private void updateSamWithNullDriversLicense() {
-		Person sam = personService.findByName(SAM);
-		assertNotNull("Should be able to find Sam", sam);
-		sam.setDriversLicense(null);
-		personService.save(sam);
 	}
 
 	@Test
@@ -109,10 +111,23 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 	}
 
 	@Test(expected = ConstraintViolationException.class)
-	public void updateSamWithNullDriversLicenseWithSessionFlush() {
+	public void updateSamWithNullDriversLicenseWithSessionFlush() throws Throwable {
 		updateSamWithNullDriversLicense();
 		// Manual flush is required to avoid false positive in test
-		sessionFactory.getCurrentSession().flush();
+		try {
+			sessionFactory.getCurrentSession().flush();
+		}
+		catch (PersistenceException ex) {
+			// Wrapped in Hibernate 5.2, with the constraint violation as cause
+			throw ex.getCause();
+		}
+	}
+
+	private void updateSamWithNullDriversLicense() {
+		Person sam = personService.findByName(SAM);
+		assertNotNull("Should be able to find Sam", sam);
+		sam.setDriversLicense(null);
+		personService.save(sam);
 	}
 
 }
